force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/vlocity_ps__ProgramEnrollmentItemRequest__c.object-meta.xml
<CustomObject>
    <description>Represents the details about the benefit items requested by the program enrollee such as housing unit, beds, medical or emergency services. Master-detail child of Unit.</description>
    <label>Placement</label>
    <nameField>
        <label>Program Enrollment Item Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>