force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>Child_Episode__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>