force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/Placement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Placement_Reason__c</fullName>
    <label>Placement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialized Services</fullName>
            </value>
            <value>
                <fullName>Reunification</fullName>
            </value>
            <value>
                <fullName>Runaway</fullName>
            </value>
            <value>
                <fullName>Family Preservation</fullName>
            </value>
            <value>
                <fullName>Emergency Placement</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>