force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__Active__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Active__c</fullName>
    <formula>IF( ( !ISNULL(vlocity_ps__StartDate__c) &amp;&amp;  ISNULL(vlocity_ps__EndDate__c) &amp;&amp;  TEXT(vlocity_ps__Status__c) == &apos;Placement Active&apos; &amp;&amp; Today() &gt;= vlocity_ps__StartDate__c) || (!ISNULL(vlocity_ps__StartDate__c) &amp;&amp; !ISNULL(vlocity_ps__EndDate__c) &amp;&amp; TEXT(vlocity_ps__Status__c) == &apos;Placement Active&apos; &amp;&amp; Today() &gt;= vlocity_ps__StartDate__c &amp;&amp; Today() &lt;= vlocity_ps__EndDate__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>