force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__EnrolleeContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EnrolleeContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment Item Request</relationshipLabel>
    <relationshipName>Program_Enrollment_Item_Request</relationshipName>
    <type>Lookup</type>
</CustomField>