force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__EnrolleeContactName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EnrolleeContactName__c</fullName>
    <formula>vlocity_ps__EnrolleeContactId__r.vlocity_ps__ContactName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>