force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__InventoryItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InventoryItemId__c</fullName>
    <label>Inventory Item</label>
    <referenceTo>vlocity_ps__InventoryItem__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Program_Enrollment_Item_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>