force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__Stage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Stage__c</fullName>
    <description>Stage</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>