force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>vlocity_ps__Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Open Request</fullName>
            </value>
            <value>
                <fullName>Request Aborted</fullName>
            </value>
            <value>
                <fullName>Request Refused</fullName>
            </value>
            <value>
                <fullName>Placed Elsewhere</fullName>
            </value>
            <value>
                <fullName>Placement Pending</fullName>
            </value>
            <value>
                <fullName>Placement Active</fullName>
            </value>
            <value>
                <fullName>Placement Inactive</fullName>
            </value>
            <value>
                <fullName>Tentatively Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>