force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__SubType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SubType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>