force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Housing</fullName>
                <default>true</default>
                <label>Housing</label>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Kinship Care</fullName>
            </value>
            <value>
                <fullName>Foster Care Provider</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Congregate Care</fullName>
            </value>
            <value>
                <fullName>Residential Treatment</fullName>
            </value>
            <value>
                <fullName>Runaway, Trial House</fullName>
            </value>
            <value>
                <fullName>Temporary Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>