force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/recordTypes/Foster_Care_Placement_Request_Layout.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care_Placement_Request_Layout</fullName>
    <active>true</active>
    <label>Foster Care Placement Request Layout</label>
</RecordType>