force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/validationRules/vlocity_ps__MaximumNumberOfRefusals.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__MaximumNumberOfRefusals</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(vlocity_ps__Status__c)==&apos;Request Refused&apos;  &amp;&amp; vlocity_ps__ProgramEnrollmentId__r.vlocity_ps__NumberOfRefusals__c &gt;4, true, false)</errorConditionFormula>
    <errorDisplayField>vlocity_ps__Status__c</errorDisplayField>
    <errorMessage>You can refuse a maximum of 5 Requests for this Program Enrollment</errorMessage>
</ValidationRule>