force-app/main/default/objects/vlocity_ps__ProgramEnrollmentItemRequest__c/validationRules/vlocity_ps__StartEndDateValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__StartEndDateValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__StartDate__c  &gt; vlocity_ps__EndDate__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__EndDate__c</errorDisplayField>
    <errorMessage>End date Cannot be less than Start Date</errorMessage>
</ValidationRule>